// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > api routingQuery should gracefully handle bad response 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "pending": 1,
        "routingType": "ITINERARY",
        "searchId": "abcd1234",
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "pending": 1,
        "routingType": "ITINERARY",
        "searchId": "abcd1235",
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
]
`;

exports[`actions > api routingQuery should make a query to OTP 1`] = `
Array [
  Array [
    [Function],
  ],
  Array [
    Object {
      "payload": Object {
        "activeItinerary": 0,
        "pending": 1,
        "routingType": "ITINERARY",
        "searchId": "abcd1234",
      },
      "type": "ROUTING_REQUEST",
    },
  ],
  Array [
    [Function],
  ],
]
`;

exports[`actions > api routingQuery should make a query to OTP: OTP Query Path 1`] = `"/api/plan?fromPlace=Origin%20%2812%2C34%29%3A%3A12%2C34&toPlace=Destination%20%2834%2C12%29%3A%3A34%2C12&mode=WALK%2CTRANSIT&ignoreRealtimeUpdates=false"`;
